examples/course/1221/index.js
"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
/**
 * @license
 * Copyright Davinchi. All Rights Reserved.
 */
var index_1 = require("@haztivity/core/index");
var _6611_1 = require("./pages/6611/6611");
var sco = index_1.ScoFactory.createSco({
    name: "1221",
    pages: [
        _6611_1.page6611
    ],
    components: []
});
//pageChangeStart
sco.on();
//pageChangeEnd
sco.on();
//pageComplete
sco.on();
//sco end
sco.on();
//error
sco.on();
sco.run();
//# sourceMappingURL=index.js.map